# foudationpose_cpp_ros2

./: README.md
auto_sam_interfaces/: CMakeLists.txt  package.xml
auto_sam_interfaces/msg/: SegmentationResult.msg
auto_sam_interfaces/srv/: SegmentRGBD.srv
auto_sam_service/: .gitignore
data_collection_service/: CMakeLists.txt
data_collection_service/wrapper/realsense/src/: base_node_setup.cpp  base_realsense_node.cpp
dexteroushand_action_client/: CMakeLists.txt  package.xml
dexteroushand_action_client/src/: main.cpp
dros_common_interfaces/: .gitignore
dros_common_interfaces/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
dros_common_interfaces/install/dros_common_interfaces/share/dros_common_interfaces/: local_setup.sh  package.sh
dros_common_interfaces/log/: latest_build
foundationpose_service/: .gitignore  CMakeLists.txt  package.xml
foundationpose_service/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
foundationpose_service/install/foundationpose_service/lib/foundationpose_service/: main
foundationpose_service/install/foundationpose_service/share/ament_index/resource_index/parent_prefix_path/: foundationpose_service
foundationpose_service/install/foundationpose_service/share/foundationpose_service/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
foundationpose_service/install/foundationpose_service/share/foundationpose_service/cmake/: foundationpose_serviceConfig.cmake
foundationpose_service/log/: latest_build
foundationpose_service/src/: main.cpp
foundationpose_service/src/detection_6d_foundationpose/: CMakeLists.txt
foundationpose_service/src/easy_deploy_tool/docker/: build_docker_ros.sh
grasp_client_ws/: CMakeLists.txt  package.xml
grasp_client_ws/src/: main.cpp
